--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "npxrus <npxrus@yandex.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.32.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
